--- a/app/views/personality_test/completed.html.erb
+++ b/app/views/personality_test/completed.html.erb
@@ -1,2 +1,4 @@
-<h1>Personality Result</h1>
-<p>Your personality type is: <%= @personality %></p>
+<div class="flex flex-col gap-10 ">
+<h1 class="text-5xl text-center">Personality Result</h1>
+<span class="text-4xl text-center"><%=session[:personality_result] %></span>
+</div>
