--- a/app/views/personality_test/index.html.erb
+++ b/app/views/personality_test/index.html.erb
@@ -1,3 +1,6 @@
 
-<h1> Welcome message </h1>
-<%= link_to "Start", clear_session_and_cache_path %>
+<div class="flex flex-col gap-10">
+    <h1 class="text-4xl text-center"> Personality Test</h1>
+    <p> Are you inclined towards extraversion or do you find comfort in introversion?</p>
+    <%= link_to "Start", clear_session_and_cache_path,class:"actionBtn text-center" %>
+</div>
