--- a/app/views/personality_test/_form_buttons.html.erb
+++ b/app/views/personality_test/_form_buttons.html.erb
@@ -1,6 +1,6 @@
 
   <div class="flex flex-row justify-between px-4">
-    <%= link_to "Previous", personality_test_path(session: session[:step], back: true), class: "previous-button  p-4 text-center" unless session[:step].zero? %>
+    <%= link_to "Previous", personality_test_path(), class: "previous-button  p-4 text-center" unless session[:step].zero? %>
     <% if session[:step] == @questions.length - 1 %>
         <%= form.submit "Send", class:"actionBtn" %>
       <%else%>
