--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -13,6 +13,7 @@
 
     /* sidebar */
     .sidebar{width: 100vw;top:0;height:150px}
+    .mobile-progress-bar{width:70vw;}
     /* Form styling */
     .questions-container{
         padding:5rem;
