--- a/app/views/personality_test/_form_buttons.html.erb
+++ b/app/views/personality_test/_form_buttons.html.erb
@@ -4,6 +4,7 @@
     <% if session[:step] == @questions.length - 1 %>
         <%= form.submit "Send", class:"actionBtn" %>
       <%else%>
-        <%= form.submit "Next", class:"next-button p-4 text-center"%>
+        <div></div>
+        <%= form.submit "Next", class:"next-button p-4 text-center "%>
     <% end %>
   </div>
