--- a/app/views/personality_test/index.html.erb
+++ b/app/views/personality_test/index.html.erb
@@ -6,7 +6,7 @@
             <%= link_to "Would you like to take the test again?", clear_session_and_cache_path,class:"actionBtn text-center" %>
         <%else%>
             <h1 class="text-4xl text-center"> Personality Test</h1>
-            <p class="text-center"> Are you inclined towards extraversion or do you find comfort in introversion?</p>
+            <p class="text-center"> Are you inclined towards extroversion or do you find comfort in introversion?</p>
             <%= link_to "Start", clear_session_and_cache_path,class:"actionBtn text-center" %>
     <%end%>
 </div>
