--- a/app/views/personality_test/_question_form.html.erb
+++ b/app/views/personality_test/_question_form.html.erb
@@ -1,4 +1,4 @@
-<div class="questionnaier-container">
+<div class="questionnaire-container">
 <%= form_with url: personality_test_result_path, method: :post do |form| %>
   <div data-controller="personality" id="data-question-<%= @question %>" class="question-container flex flex-col items-center">
     <h3 class="text-2xl font-bold text-center"><%= @question %></h3>
